--- a/src/component/styles/home.css
+++ b/src/component/styles/home.css
@@ -31,8 +31,9 @@
 
 .about-btn {
   padding: clamp(0.25rem, 2.5vw, 0.5rem) clamp(1rem, 2.5vw, 1.25rem);
-  font-size: clamp(0.5rem, 2.5vw, 0.9rem);
+  font-size: clamp(0.5rem, 2.5vw, 0.75rem);
   font-family: 'Playfair Display', serif;
+  letter-spacing: 0.125rem;
   color: orange;
   background: transparent;
   border-radius: 3px;
@@ -70,16 +71,16 @@
 
 .about-title { grid-column: 1 / 2; height: 100%; color: burlywood; background: seagreen; }
 .about-title > h1 {
-  margin: 0;
-  padding: clamp(3rem, 5vw, 7rem) 0;
-  text-indent: clamp(0.5rem, 2.5vw, 2rem);
+  margin-left: clamp(0.25rem, 1vw, 1rem);
+  padding-top: clamp(3rem, 2.5vw, 5rem);
+  text-indent: clamp(0.5rem, 2vw, 5rem);
   font-size: clamp(2rem, 5vw, 4rem);
   font-family: 'Playfair Display', serif;
 }
 
 .left-wrapper { grid-column: 1 / 2; padding-bottom: 10rem; height: 100%; background: seagreen; z-index: 1; }
 .from-left {
-  margin: clamp(2rem, 5vw, 10rem) 10rem 0 auto; 
+  margin: clamp(2rem, 10vw, 10rem) 10rem 0 auto; 
   flex-direction: column;
   justify-content: space-evenly;
   min-height: 25rem;
@@ -96,7 +97,7 @@
 
 .right-wrapper { justify-content: center; grid-column: 2 / 3; padding-bottom: 10rem; height: 100%; }
 .from-right-1 {
-  margin-top: clamp(2rem, 5vw, 10rem);
+  margin-top: clamp(2rem, 10vw, 10rem);
   min-height: 25rem;
   width: max(15rem, 40%);
   background: url("https://images.pexels.com/photos/4498220/pexels-photo-4498220.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
@@ -106,7 +107,7 @@
   border-radius: 0.25rem;
 }
 .from-right-2 {
-  margin-top: clamp(2rem, 5vw, 10rem);
+  margin-top: clamp(2rem, 10vw, 10rem);
   min-height: 25rem;
   width: max(15rem, 40%);
   background: url("https://images.pexels.com/photos/919436/pexels-photo-919436.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
@@ -116,7 +117,7 @@
   border-radius: 0.25rem;
 }
 .from-right-3 {
-  margin-top: clamp(2rem, 5vw, 10rem);
+  margin-top: clamp(2rem, 10vw, 10rem);
   min-height: 22rem;
   width: max(15rem, 70%);
   background: url("https://images.pexels.com/photos/2440471/pexels-photo-2440471.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
